<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/notificationsFragment"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="always"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/categoriesFragment"
        android:icon="@drawable/ic_categories"
        app:showAsAction="always"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/title_home" />

</menu>