<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/basic"
    android:padding="@dimen/_24sdp"
    tools:context=".Fragments.Dialogs.AddImgFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/ibm_plex_sans_arabic_regular"
        android:text="@string/add_img"
        android:textColor="@color/white"
        android:textSize="@dimen/_24sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_take_picture"
            style="@style/blue_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/btn_select_img"
            style="@style/blue_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/purple"
            android:text="@string/select_img" />

        <Button
            android:id="@+id/btn_chancel"
            style="@style/blue_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:backgroundTint="@color/btn_cancel"
            android:text="@string/chancel" />

    </LinearLayout>

</RelativeLayout>