<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_name"
            style="@style/editText"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/name"
            android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_email"
            style="@style/editText"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_password"
            style="@style/editText"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:layout_margin="@dimen/_24sdp"
            app:boxBackgroundColor="@color/btn_cancel"
            android:elevation="@dimen/_4sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:hint="@string/major">

        <AutoCompleteTextView
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_up_btn_complete_the_registration_process"
                style="@style/blue_btn"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:text="@string/Complete_the_registration_process" />


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                style="@style/ProgressBar"
                android:layout_alignEnd="@+id/sign_up_btn_complete_the_registration_process"
                app:indicatorColor="@color/white"
                app:indicatorSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:trackCornerRadius="5dp" />

            </RelativeLayout>
        </LinearLayout>




</ScrollView>