<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Fragments.ChangePasswordBottomSheetFragment"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_56sdp"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/ibm_plex_sans_arabic_regular"
            android:gravity="right|center_vertical"
            android:layout_marginRight="@dimen/_18sdp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sdp" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_old_password"
        style="@style/editText"
        android:hint="@string/old_password"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_new_password"
        style="@style/editText"
        android:hint="@string/new_password"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_old_password" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_confirm_new_password"
        style="@style/editText"
        android:hint="@string/confirm_new_password"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_password" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/blue_btn"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_confirm_new_password" />


</androidx.constraintlayout.widget.ConstraintLayout>