<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            style="@style/editText"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            style="@style/editText"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <TextView
            android:id="@+id/login_tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/ibm_plex_sans_arabic_regular"
            android:text="@string/forgot_password" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_btn"
                style="@style/blue_btn"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:text="@string/login" />


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                style="@style/ProgressBar"
                android:layout_alignEnd="@+id/login_btn"
                app:indicatorColor="@color/white"
                app:indicatorSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:trackCornerRadius="5dp"  />
            </RelativeLayout>

    </LinearLayout>




</ScrollView>