<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/basic"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                style="@style/toolbarTitle"
                android:text="@string/address"/>


        </androidx.appcompat.widget.Toolbar>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_governorate"
            style="@style/editText"
            android:layout_marginTop="@dimen/_24sdp"
            android:hint="@string/governorate"
            android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sign_up_et_address"
            style="@style/editText"
            android:hint="@string/address" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_up_btn_next"
                style="@style/blue_btn"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginBottom="@dimen/_40sdp"
                android:text="@string/next" />


            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progressBar"
                style="@style/ProgressBar"
                android:layout_alignEnd="@+id/sign_up_btn_next"
                app:indicatorColor="@color/white"
                app:indicatorSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:trackCornerRadius="5dp" />

        </RelativeLayout>

    </LinearLayout>



</ScrollView>