<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/_4sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_24sdp"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center_vertical|right">

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:gravity="right"
               android:layout_marginRight="@dimen/_16sdp">

               <TextView
                   android:id="@+id/company_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/custom_item_name"
                   android:textColor="@color/basic"
                   android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                   android:textSize="@dimen/_16sdp"/>

               <TextView
                   android:id="@+id/post_time"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/custom_item_date"
                   android:textColor="@color/title_text"
                   android:fontFamily="@font/ibm_plex_sans_arabic_light"
                   android:textSize="@dimen/_12sdp"/>

           </LinearLayout>

           <ImageView
               android:id="@+id/company_avatar"
               android:layout_width="@dimen/_48sdp"
               android:layout_height="@dimen/_48sdp"
               android:background="@drawable/corner_reduis"
               android:clipToOutline="true"
               tools:srcCompat="@tools:sample/avatars" />



       </LinearLayout>

        <TextView
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_item_post"
            android:fontFamily="@font/ibm_plex_sans_arabic_light"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/title_text"
            android:layout_marginTop="@dimen/_16sdp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>